fix: create correct insertion sort gifs

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19/19 [00:31<00:00,  1.79it/s]\n"
+      "100%|██████████| 19/19 [00:29<00:00,  1.88it/s]\n"
      ]
     }
    ],
@@ -30,14 +30,16 @@
     "ap.fps = 1\n",
     "ap.xlable_fontsize = 12\n",
     "ap.title_fontsize = 12\n",
-    "ap.bubbleSort([3,2,75,90,8,9,1,10,4,5,7,6,34,21,5,67,12,54,23,1])"
+    "\n",
+    "array = [1,18,16,2,9,6,12,4,19,17,14,3,10,20,5,13,8,11,15,7]\n",
+    "ap.bubbleSort(array)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](gifs/bubble_sort_list_1_20.gif)"
+    "![](gifs/bubble_sort_list.gif)"
    ]
   },
   {
@@ -49,7 +51,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [02:18<00:00,  1.44it/s]\n"
+      "100%|██████████| 35/35 [02:05<00:00,  1.51it/s]\n"
      ]
     }
    ],
@@ -84,7 +86,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [01:15<00:00,  3.20s/it]\n"
+      "100%|██████████| 35/35 [01:08<00:00,  3.00s/it]\n"
      ]
     }
    ],
@@ -119,7 +121,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [01:17<00:00,  3.39s/it]\n"
+      "100%|██████████| 35/35 [01:10<00:00,  3.02s/it]\n"
      ]
     }
    ],
@@ -154,7 +156,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [01:15<00:00,  3.64s/it]\n"
+      "100%|██████████| 35/35 [01:09<00:00,  3.08s/it]\n"
      ]
     }
    ],
@@ -189,7 +191,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [01:09<00:00,  3.03s/it]\n"
+      "100%|██████████| 35/35 [01:08<00:00,  3.01s/it]\n"
      ]
     }
    ],
@@ -224,7 +226,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35/35 [02:12<00:00,  1.44it/s]\n"
+      "100%|██████████| 35/35 [02:07<00:00,  1.51it/s]\n"
      ]
     }
    ],
@@ -259,7 +261,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19/19 [00:26<00:00,  2.26it/s]\n"
+      "100%|██████████| 19/19 [00:12<00:00,  1.54s/it]\n"
      ]
     }
    ],
@@ -271,7 +273,7 @@
     "ap.show_title = False\n",
     "shape = (1,20)\n",
     "array = random_array(shape)\n",
-    "ap.bubbleSort(array)"
+    "ap.insertionSort(array)"
    ]
   },
   {
@@ -290,7 +292,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:04<00:00,  2.06it/s]\n"
+      "100%|██████████| 9/9 [00:01<00:00,  4.26it/s]\n"
      ]
     }
    ],
@@ -302,7 +304,7 @@
     "ap.show_title = False\n",
     "shape = (2,5)\n",
     "array = random_array(shape)\n",
-    "ap.bubbleSort(array)"
+    "ap.insertionSort(array)"
    ]
   },
   {
@@ -314,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19/19 [00:27<00:00,  1.82it/s]\n"
+      "100%|██████████| 19/19 [00:11<00:00,  1.11s/it]\n"
      ]
     }
    ],
@@ -333,7 +335,7 @@
     "ap.show_title = False\n",
     "shape = (20,1)\n",
     "array = random_array(shape)\n",
-    "ap.bubbleSort(array)"
+    "ap.insertionSort(array)"
    ]
   },
   {
