fix: change name from algopy to alvito

--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -13,11 +13,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from algorithm_visualizer import algopy\n",
+    "from algorithm_visualizer import alvito\n",
     "from utils import random_array\n",
     "\n",
-    "ap = algopy()\n",
-    "ap.custom_save_name = True\n",
+    "avt = alvito()\n",
+    "avt.custom_save_name = True\n",
     "shape = (6,6)"
    ]
   },
@@ -43,8 +43,8 @@
    ],
    "source": [
     "array = random_array(shape)\n",
-    "ap.save_name = 'bubble_sort_6_6'\n",
-    "ap.bubbleSort(array)"
+    "avt.save_name = 'bubble_sort_6_6'\n",
+    "avt.bubbleSort(array)"
    ]
   },
   {
@@ -76,8 +76,8 @@
    ],
    "source": [
     "array = random_array(shape)\n",
-    "ap.save_name = 'selection_sort_6_6'\n",
-    "ap.selectionSort(array,)"
+    "avt.save_name = 'selection_sort_6_6'\n",
+    "avt.selectionSort(array,)"
    ]
   },
   {
@@ -109,8 +109,8 @@
    ],
    "source": [
     "array = random_array(shape)\n",
-    "ap.save_name = 'insertion_sort_6_6'\n",
-    "ap.insertionSort(array)"
+    "avt.save_name = 'insertion_sort_6_6'\n",
+    "avt.insertionSort(array)"
    ]
   },
   {
