--- a/Colors_and_Colormaps.ipynb
+++ b/Colors_and_Colormaps.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import numpy as np\n",
     "from random import shuffle\n",
-    "from algorithm_visualizer import algopy\n",
+    "from algorithm_visualizer import alvito\n",
     "from utils import random_array\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import HTML, display\n",
@@ -48,24 +48,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ap = algopy()\n",
-    "ap.fps = 1\n",
-    "ap.show_xlable = False\n",
-    "ap.title_fontsize = 9\n",
-    "ap.rectangle_linewidth = 2\n",
-    "ap.dpi = 80\n",
+    "avt = alvito()\n",
+    "avt.fps = 1\n",
+    "avt.show_xlable = False\n",
+    "avt.title_fontsize = 9\n",
+    "avt.rectangle_linewidth = 2\n",
+    "avt.dpi = 80\n",
     "\n",
-    "ap.save_dir = 'cmap_gifs/'\n",
-    "ap.custom_save_name = True\n",
+    "avt.save_dir = 'cmap_gifs/'\n",
+    "avt.custom_save_name = True\n",
     "\n",
     "shape = (10,1)\n",
     "array = random_array(shape)\n",
     "\n",
     "with io.capture_output() as captured: # supressing output when looping over all the cmaps\n",
     "    for cmap_name in plt.colormaps():\n",
-    "        ap.colormap = cmap_name\n",
-    "        ap.save_name = cmap_name\n",
-    "        ap.insertionSort(array, cmap_name)"
+    "        avt.colormap = cmap_name\n",
+    "        avt.save_name = cmap_name\n",
+    "        avt.insertionSort(array, cmap_name)"
    ]
   },
   {
