--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from algorithm_visualizer import algopy\n",
+    "from algorithm_visualizer import alvito\n",
     "from utils import random_array"
    ]
   },
@@ -24,15 +24,15 @@
     }
    ],
    "source": [
-    "ap = algopy()\n",
-    "ap.custom_save_name = True\n",
-    "ap.save_name = 'bubble_sort_list'\n",
-    "ap.fps = 1\n",
-    "ap.xlable_fontsize = 12\n",
-    "ap.title_fontsize = 12\n",
+    "avt = alvito()\n",
+    "avt.custom_save_name = True\n",
+    "avt.save_name = 'bubble_sort_list'\n",
+    "avt.fps = 1\n",
+    "avt.xlable_fontsize = 12\n",
+    "avt.title_fontsize = 12\n",
     "\n",
     "array = [1,18,16,2,9,6,12,4,19,17,14,3,10,20,5,13,8,11,15,7]\n",
-    "ap.bubbleSort(array)"
+    "avt.bubbleSort(array)"
    ]
   },
   {
@@ -56,18 +56,18 @@
     }
    ],
    "source": [
-    "ap = algopy()\n",
-    "ap.custom_save_name = True\n",
-    "ap.save_name = 'bubble_sort_YlGn'\n",
-    "ap.colormap = 'YlGn'\n",
-    "ap.fps = 20\n",
-    "ap.track_operations = False\n",
-    "ap.show_xlable = False\n",
-    "ap.show_title = False\n",
+    "avt = alvito()\n",
+    "avt.custom_save_name = True\n",
+    "avt.save_name = 'bubble_sort_YlGn'\n",
+    "avt.colormap = 'YlGn'\n",
+    "avt.fps = 20\n",
+    "avt.track_operations = False\n",
+    "avt.show_xlable = False\n",
+    "avt.show_title = False\n",
     "\n",
     "shape = (6,6)\n",
     "array = random_array(shape)\n",
-    "ap.bubbleSort(array)"
+    "avt.bubbleSort(array)"
    ]
   },
   {
@@ -91,18 +91,18 @@
     }
    ],
    "source": [
-    "ap = algopy()\n",
-    "ap.custom_save_name = True\n",
-    "ap.save_name = 'insertion_sort_wistia'\n",
-    "ap.colormap = 'Wistia'\n",
-    "ap.fps = 5\n",
-    "ap.rectangle_color_1 = 'steelblue'\n",
-    "ap.show_xlable = False\n",
-    "ap.show_title = False\n",
+    "avt = alvito()\n",
+    "avt.custom_save_name = True\n",
+    "avt.save_name = 'insertion_sort_wistia'\n",
+    "avt.colormap = 'Wistia'\n",
+    "avt.fps = 5\n",
+    "avt.rectangle_color_1 = 'steelblue'\n",
+    "avt.show_xlable = False\n",
+    "avt.show_title = False\n",
     "\n",
     "shape = (6,6)\n",
     "array = random_array(shape)\n",
-    "ap.insertionSort(array)"
+    "avt.insertionSort(array)"
    ]
   },
   {
@@ -126,18 +126,18 @@
     }
    ],
    "source": [
-    "ap = algopy()\n",
-    "ap.custom_save_name = True\n",
-    "ap.save_name = 'insertion_sort_grey'\n",
-    "ap.colormap = 'Greys'\n",
-    "ap.fps = 5\n",
-    "ap.rectangle_color_1 = 'hotpink'\n",
-    "ap.show_xlable = False\n",
-    "ap.show_title = False\n",
+    "avt = alvito()\n",
+    "avt.custom_save_name = True\n",
+    "avt.save_name = 'insertion_sort_grey'\n",
+    "avt.colormap = 'Greys'\n",
+    "avt.fps = 5\n",
+    "avt.rectangle_color_1 = 'hotpink'\n",
+    "avt.show_xlable = False\n",
+    "avt.show_title = False\n",
     "\n",
     "shape = (6,6)\n",
     "array = random_array(shape)\n",
-    "ap.insertionSort(array)"
+    "avt.insertionSort(array)"
    ]
   },
   {
@@ -161,18 +161,18 @@
     }
    ],
    "source": [
-    "ap = algopy()\n",
-    "ap.custom_save_name = True\n",
-    "ap.save_name = 'insertion_sort_reds'\n",
-    "ap.colormap = 'Reds'\n",
-    "ap.fps = 5\n",
-    "ap.rectangle_color_1 = 'steelblue'\n",
-    "ap.show_xlable = False\n",
-    "ap.show_title = False\n",
+    "avt = alvito()\n",
+    "avt.custom_save_name = True\n",
+    "avt.save_name = 'insertion_sort_reds'\n",
+    "avt.colormap = 'Reds'\n",
+    "avt.fps = 5\n",
+    "avt.rectangle_color_1 = 'steelblue'\n",
+    "avt.show_xlable = False\n",
+    "avt.show_title = False\n",
     "\n",
     "shape = (6,6)\n",
     "array = random_array(shape)\n",
-    "ap.insertionSort(array)"
+    "avt.insertionSort(array)"
    ]
   },
   {
@@ -196,18 +196,18 @@
     }
    ],
    "source": [
-    "ap = algopy()\n",
-    "ap.custom_save_name = True\n",
-    "ap.save_name = 'insertion_sort_blues'\n",
-    "ap.colormap = 'Blues'\n",
-    "ap.fps = 5\n",
-    "ap.rectangle_color_1 = 'maroon'\n",
-    "ap.show_xlable = False\n",
-    "ap.show_title = False\n",
+    "avt = alvito()\n",
+    "avt.custom_save_name = True\n",
+    "avt.save_name = 'insertion_sort_blues'\n",
+    "avt.colormap = 'Blues'\n",
+    "avt.fps = 5\n",
+    "avt.rectangle_color_1 = 'maroon'\n",
+    "avt.show_xlable = False\n",
+    "avt.show_title = False\n",
     "\n",
     "shape = (6,6)\n",
     "array = random_array(shape)\n",
-    "ap.insertionSort(array)"
+    "avt.insertionSort(array)"
    ]
   },
   {
@@ -231,18 +231,18 @@
     }
    ],
    "source": [
-    "ap = algopy()\n",
-    "ap.custom_save_name = True\n",
-    "ap.save_name = 'bubble_sort_cool'\n",
-    "ap.colormap = 'cool'\n",
-    "ap.rectangle_color_1 = 'black'\n",
-    "ap.rectangle_color_2 = 'gold'\n",
-    "ap.show_xlable = False\n",
-    "ap.show_title = False\n",
+    "avt = alvito()\n",
+    "avt.custom_save_name = True\n",
+    "avt.save_name = 'bubble_sort_cool'\n",
+    "avt.colormap = 'cool'\n",
+    "avt.rectangle_color_1 = 'black'\n",
+    "avt.rectangle_color_2 = 'gold'\n",
+    "avt.show_xlable = False\n",
+    "avt.show_title = False\n",
     "\n",
     "shape = (6,6)\n",
     "array = random_array(shape)\n",
-    "ap.bubbleSort(array)"
+    "avt.bubbleSort(array)"
    ]
   },
   {
@@ -266,14 +266,15 @@
     }
    ],
    "source": [
-    "ap = algopy()\n",
-    "ap.custom_save_name = True\n",
-    "ap.save_name = 'insertion_sort_1_20'\n",
-    "ap.show_xlable = False\n",
-    "ap.show_title = False\n",
+    "avt = alvito()\n",
+    "avt.custom_save_name = True\n",
+    "avt.save_name = 'insertion_sort_1_20'\n",
+    "avt.show_xlable = False\n",
+    "avt.show_title = False\n",
+    "\n",
     "shape = (1,20)\n",
     "array = random_array(shape)\n",
-    "ap.insertionSort(array)"
+    "avt.insertionSort(array)"
    ]
   },
   {
@@ -297,14 +298,15 @@
     }
    ],
    "source": [
-    "ap = algopy()\n",
-    "ap.custom_save_name = True\n",
-    "ap.save_name = 'insertion_sort_2_4'\n",
-    "ap.show_xlable = False\n",
-    "ap.show_title = False\n",
+    "avt = alvito()\n",
+    "avt.custom_save_name = True\n",
+    "avt.save_name = 'insertion_sort_2_4'\n",
+    "avt.show_xlable = False\n",
+    "avt.show_title = False\n",
+    "\n",
     "shape = (2,5)\n",
     "array = random_array(shape)\n",
-    "ap.insertionSort(array)"
+    "avt.insertionSort(array)"
    ]
   },
   {
@@ -328,14 +330,15 @@
     }
    ],
    "source": [
-    "ap = algopy()\n",
-    "ap.custom_save_name = True\n",
-    "ap.save_name = 'insertion_sort_20_1'\n",
-    "ap.show_xlable = False\n",
-    "ap.show_title = False\n",
+    "avt = alvito()\n",
+    "avt.custom_save_name = True\n",
+    "avt.save_name = 'insertion_sort_20_1'\n",
+    "avt.show_xlable = False\n",
+    "avt.show_title = False\n",
+    "\n",
     "shape = (20,1)\n",
     "array = random_array(shape)\n",
-    "ap.insertionSort(array)"
+    "avt.insertionSort(array)"
    ]
   },
   {
