rename: avt->avo

--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -16,8 +16,8 @@
     "from algorithm_visualizer import alvito\n",
     "from utils import random_array\n",
     "\n",
-    "avt = alvito()\n",
-    "avt.custom_save_name = True\n",
+    "avo = alvito()\n",
+    "avo.custom_save_name = True\n",
     "shape = (6,6)"
    ]
   },
@@ -43,8 +43,8 @@
    ],
    "source": [
     "array = random_array(shape)\n",
-    "avt.save_name = 'bubble_sort_6_6'\n",
-    "avt.bubbleSort(array)"
+    "avo.save_name = 'bubble_sort_6_6'\n",
+    "avo.bubbleSort(array)"
    ]
   },
   {
@@ -76,8 +76,8 @@
    ],
    "source": [
     "array = random_array(shape)\n",
-    "avt.save_name = 'selection_sort_6_6'\n",
-    "avt.selectionSort(array,)"
+    "avo.save_name = 'selection_sort_6_6'\n",
+    "avo.selectionSort(array,)"
    ]
   },
   {
@@ -109,8 +109,8 @@
    ],
    "source": [
     "array = random_array(shape)\n",
-    "avt.save_name = 'insertion_sort_6_6'\n",
-    "avt.insertionSort(array)"
+    "avo.save_name = 'insertion_sort_6_6'\n",
+    "avo.insertionSort(array)"
    ]
   },
   {
