--- a/Colors_and_Colormaps.ipynb
+++ b/Colors_and_Colormaps.ipynb
@@ -48,24 +48,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "avt = alvito()\n",
-    "avt.fps = 1\n",
-    "avt.show_xlable = False\n",
-    "avt.title_fontsize = 9\n",
-    "avt.rectangle_linewidth = 2\n",
-    "avt.dpi = 80\n",
+    "avo = alvito()\n",
+    "avo.fps = 1\n",
+    "avo.show_xlable = False\n",
+    "avo.title_fontsize = 9\n",
+    "avo.rectangle_linewidth = 2\n",
+    "avo.dpi = 80\n",
     "\n",
-    "avt.save_dir = 'cmap_gifs/'\n",
-    "avt.custom_save_name = True\n",
+    "avo.save_dir = 'cmap_gifs/'\n",
+    "avo.custom_save_name = True\n",
     "\n",
     "shape = (10,1)\n",
     "array = random_array(shape)\n",
     "\n",
     "with io.capture_output() as captured: # supressing output when looping over all the cmaps\n",
     "    for cmap_name in plt.colormaps():\n",
-    "        avt.colormap = cmap_name\n",
-    "        avt.save_name = cmap_name\n",
-    "        avt.insertionSort(array, cmap_name)"
+    "        avo.colormap = cmap_name\n",
+    "        avo.save_name = cmap_name\n",
+    "        avo.insertionSort(array, cmap_name)"
    ]
   },
   {
