feat: working on shell short

--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -119,6 +119,48 @@
    "source": [
     "![](gifs/insertion_sort_6_6.gif)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Shell Sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00,  4.57it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  9.84it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  4.95it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  9.95it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  5.23it/s]\n",
+      "100%|██████████| 4/4 [00:00<00:00,  6.83it/s]\n",
+      "100%|██████████| 4/4 [00:00<00:00,  5.37it/s]\n",
+      "100%|██████████| 9/9 [00:01<00:00,  6.16it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "shape = (1,10)\n",
+    "array = random_array(shape)\n",
+    "avo.save_name = 'shell_sort_6_6'\n",
+    "avo.fps = 1\n",
+    "avo.shellSort(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
